--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>Twiso</title>
   </head>
-  <body ontouchstart=””>
+  <body ontouchstart="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
