--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Twiso</title>
+    <meta name="description" content="Keep track of the movies & shows you watch!">
   </head>
   <body ontouchstart="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
