:sparkles: added open graph tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, viewport-fit=cover"
+    />
     <meta name="theme-color" content="#000000" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png">
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:image" content="https://generate-og-image.pouyio.now.sh/og-image" />
+    <meta property="og:title" content="https://generate-og-image.pouyio.now.sh/og-title" />
+    <meta property="og:url" content="https://generate-og-image.pouyio.now.sh/og-url" />
+    <meta
+      property="og:description"
+      content="https://generate-og-image.pouyio.now.sh/og-description"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,7 +35,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Twiso</title>
-    <meta name="description" content="Keep track of the movies & shows you watch!">
+    <meta
+      name="description"
+      content="Keep track of the movies & shows you watch!"
+    />
   </head>
   <body ontouchstart="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
