updated open graph generator url

--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="og:image" content="https://generate-og-image.pouyio.now.sh/og-image" />
-    <meta property="og:title" content="https://generate-og-image.pouyio.now.sh/og-title" />
-    <meta property="og:url" content="https://generate-og-image.pouyio.now.sh/og-url" />
+    <meta property="og:image" content="https://generate-og.pouyio.now.sh/image" />
+    <meta property="og:title" content="https://generate-og.pouyio.now.sh/title" />
+    <meta property="og:url" content="https://generate-og.pouyio.now.sh/url" />
     <meta
       property="og:description"
-      content="https://generate-og-image.pouyio.now.sh/og-description"
+      content="https://generate-og.pouyio.now.sh/description"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
