--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="og:image" content="https://generate-og.pouyio.now.sh/image" />
+    <meta property="og:image" content="https://generate-og.pouyio.now.sh/image.jpg" />
     <meta property="og:title" content="https://generate-og.pouyio.now.sh/title" />
     <meta property="og:url" content="https://generate-og.pouyio.now.sh/url" />
     <meta
