:bug: update meta

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
-      property="og:description"
-      content="https://generate-og.pouyio.now.sh/description"
+      name="description"
+      content="Keep track of the movies & shows you watch!"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
