--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="mask-icon"
-      href="%PUBLIC_URL%/safari-pinned-tab.svg"
-      color="#4e4e4e"
-    />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4e4e4e" />
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0, viewport-fit=cover"
@@ -19,76 +15,73 @@
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link
-      href="%PUBLIC_URL%/splashscreens/iphone5_splash.png"
+      href="/splashscreens/iphone5_splash.png"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/iphone6_splash.png"
+      href="/splashscreens/iphone6_splash.png"
       media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/iphoneplus_splash.png"
+      href="/splashscreens/iphoneplus_splash.png"
       media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/iphonex_splash.png"
+      href="/splashscreens/iphonex_splash.png"
       media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/iphonexr_splash.png"
+      href="/splashscreens/iphonexr_splash.png"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/iphonexsmax_splash.png"
+      href="/splashscreens/iphonexsmax_splash.png"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/ipad_splash.png"
+      href="/splashscreens/ipad_splash.png"
       media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/ipadpro1_splash.png"
+      href="/splashscreens/ipadpro1_splash.png"
       media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/ipadpro3_splash.png"
+      href="/splashscreens/ipadpro3_splash.png"
       media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
-      href="%PUBLIC_URL%/splashscreens/ipadpro2_splash.png"
+      href="/splashscreens/ipadpro2_splash.png"
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
-    <link
-      rel="apple-touch-icon"
-      href="%PUBLIC_URL%/icons/apple-touch-icon.png"
-    />
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/icons/icon-32x32.png"
+      href="/icons/icon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/icons/icon-16x16.png"
+      href="/icons/icon-16x16.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -118,6 +111,8 @@
   <body ontouchstart="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Add entry point 👇 -->
+    <script type="module" src="/src/index.tsx"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
