:art: updated function

--- a/index.html
+++ b/index.html
@@ -98,11 +98,8 @@
     />
     <meta property="og:site_name" content="Twiso" />
 
-    <meta property="og:type" content="__OG_TYPE__" />
-    <meta property="og:title" content="__OG_TITLE__" />
-    <meta property="og:image" content="__OG_IMAGE__" />
-    <meta property="og:description" content="__OG_DESCRIPTION__" />
-    <meta property="og:url" content="__OG_URL__" />
+    <!-- __META_OG__ -->
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&amp;family=Nunito:wght@300;700&amp;display=swap"
