--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
 
     <!-- __META_OG__ -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&amp;family=Nunito:wght@300;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&amp;family=Nunito:wght@300;700&amp;display=swap"
     />
   </head>
   <body ontouchstart="">
